# titled

./: .gitmodules  CMakeLists.txt  README
cmake/Modules/: FindPoco.cmake  FindSQLite3x.cmake
plugins/: CMakeLists.txt
plugins/FilmwebProvider/: CMakeLists.txt  FilmwebProvider.cpp  FilmwebProvider.hpp
resources/: resources.qrc
src/: CMakeLists.txt  ClickableImage.cpp  ClickableImage.hpp  Collection.cpp  Collection.hpp  CollectionItem.cpp  CollectionItem.hpp  CollectionListViewDelegate.cpp  CollectionListViewDelegate.hpp  CollectionModel.cpp  CollectionModel.hpp  Defaults.hpp  FilmwebSearch.cpp  FilmwebSearch.hpp  Filter.cpp  Filter.hpp  FilterGroup.cpp  FilterGroup.hpp  InfoDelegate.cpp  InfoDelegate.hpp  InfoItem.cpp  InfoItem.hpp  MainWindow.cpp  MainWindow.hpp  MovieDatabaseProvider.hpp  MyApplication.cpp  MyApplication.hpp  MyListModel.cpp  MyListModel.hpp  Provider.hpp  ResultsItem.cpp  ResultsItem.hpp  ResultsListViewDelegate.cpp  ResultsListViewDelegate.hpp  ResultsModel.cpp  ResultsModel.hpp  SettingsWidget.cpp  SettingsWidget.hpp  SettingsWindow.cpp  SettingsWindow.hpp  (+5 more)
